--- a/src/footer.css
+++ b/src/footer.css
@@ -1,9 +1,8 @@
  
   footer {
     width: 100%;
-    padding: 0.25em;
+    padding: 10px 0px;
     background-color: mediumblue;
     color: aliceblue;
-    display: grid;
-    place-content: center;
+    text-align: center;
   }
