--- a/src/header.css
+++ b/src/header.css
@@ -1,10 +1,8 @@
 
   header {
     width: 100%;
-    padding: 0 0.25em;
+    padding: 5px 0px;
     background-color: mediumblue;
     color: aliceblue;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    text-align: center;
   }
