props and props drilling

--- a/src/footer.css
+++ b/src/footer.css
@@ -2,7 +2,7 @@
   footer {
     width: 100%;
     padding: 10px 0px;
-    background-color: mediumblue;
-    color: aliceblue;
+    background-color: #61dbfb;
+    color: #000;
     text-align: center;
   }
