--- a/src/header.css
+++ b/src/header.css
@@ -2,7 +2,7 @@
   header {
     width: 100%;
     padding: 5px 0px;
-    background-color: mediumblue;
-    color: aliceblue;
+    background-color: #61dbfb;
+    color: #000;
     text-align: center;
   }
