--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
   height: 100vh; 
   width: 100%; 
   max-width: 500px;
-  border: 1px solid mediumblue;
+  border: 3px solid #000;
   margin: auto;
 }
 /*
